--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,8 +5,8 @@
   <div class="card-product">
     <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     <div class="card-product-infos">
-      <h2>Skello</h2>
-      <p>Manage your staff calendar</p>
+      <h2><%= product.title %></h3>
+      <p><%= product.tagline %></p>
     </div>
   </div>
 <% end %>
