add first config testing

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
   <div class="card-product">
     <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     <div class="card-product-infos">
-      <h2><%= product.title %></h3>
+      <h2><%= product.name %></h3>
       <p><%= product.tagline %></p>
     </div>
   </div>
